Constructors using the array-style method of specifying dependencies are properly called as constructors.

--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
         <div>Controller: {{ctrl.resolved}}</div>
         <div>Returns resolve: {{ctrl.hasResolve}}</div>
     </div>
+    <div ng-controller="ArraySpecifiedController as ctrl">Array-specified controller: {{ctrl.resolved}}</div>
     <div directive>Directive: {{resolved}}</div>
     <div isolated-scope></div>
     <div>Filter: {{'outer' | resolved }}</div>
